# ros_shared_object

./: CMakeLists.txt  README.md  package.xml  ros_shared_object.cpp  test.cpp
src/: ros_shared_object.cpp
