<?xml version="1.0"?>
<package format="3">
  <name>ros_shared_object_library</name>
  <version>0.0.1</version>
  <description>ROS2 shared object library example</description>
  <maintainer email="shinohara@globalwalkers.co.jp">gw-shinohara</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>